// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<MainNavigationLink /> should render 1`] = `
.c0 {
  text-decoration: none;
  transition-duration: 150ms;
  transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  color: rgb(248, 207, 169);
}

.c0 :hover,
.c0 :active,
.c0 :focus {
  text-decoration: underline;
}

.c1 {
  font-size: 1.75rem;
  line-height: 2.25rem;
  font-family: "Krana Fat",Trebuchet MS;
}

<a
  class="c0 c1"
  href="/"
  title="Lauri Lavanti"
>
  Lauri Lavanti
</a>
`;

exports[`<MainNavigationLink /> should render link for front page 1`] = `
.c0 {
  text-decoration: none;
  transition-duration: 150ms;
  transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  color: rgb(248, 207, 169);
}

.c0 :hover,
.c0 :active,
.c0 :focus {
  text-decoration: underline;
}

.c1 {
  font-size: 1.75rem;
  line-height: 2.25rem;
  font-family: "Krana Fat",Trebuchet MS;
  font-size: 3rem;
  line-height: 1;
}

<a
  class="c0 c1"
  href="/"
  title="Lauri Lavanti"
>
  Lauri Lavanti
</a>
`;

exports[`<MainNavigationLink /> should render link that is hidden when current 1`] = `
.c0 {
  text-decoration: none;
  transition-duration: 150ms;
  transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  color: rgb(248, 207, 169);
}

.c0 :hover,
.c0 :active,
.c0 :focus {
  text-decoration: underline;
}

.c1 {
  font-size: 1.75rem;
  line-height: 2.25rem;
  font-family: "Krana Fat",Trebuchet MS;
}

<a
  class="c0 c1"
  href="/"
  title="Lauri Lavanti"
>
  Lauri Lavanti
</a>
`;
